--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="pages/resume.html">resume</a></li>
       <li><a href="pages/projects.html">projects</a></li>
       <li><a href="pages/hacking.html">hacking</a></li>
-      <li><a href="pages/motorcycles.html">motorcycles</a></li>
+      <!-- Who cares? <li><a href="pages/motorcycles.html">motorcycles</a></li> -->
       <li><a href="pages/travel.html">travel</a></li>
     </ul>
 
