--- a/pages/projects.html
+++ b/pages/projects.html
@@ -12,10 +12,11 @@
     </div>
     <h4>Projects</h4>
     <ul>
-      <li><a href="#">inthecrnr: This Site</a>
-      <li><a href="#">Chip8-C: Chip 8 Interpreter in C</a>
-      <li><a href="#">UDS-VIZ: Unix Domain Socket Dot Visualizer</a></li>
-      <li><a href="#">GreenCrab: Rust Remote Access Tool (Educational)</a></li>
+      <li><a href="https://github.com/nSchantz/nSchantz.github.io" target="_blank" rel="noopener noreferrer">inthecrnr: This Site</a>
+      <li><a href="https://github.com/nSchantz/chip8-c/" target="_blank" rel="noopener noreferrer">chip8-c: Chip 8 Interpreter in C</a>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">uds-viz: Unix Domain Socket Visualizer</a></li>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">greencrab: Rust Remote Access Tool (Educational)</a></li>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">throughloop: Fun Ball Passing Game</a><li>
     </ul>
 
     <footer>
