--- a/pages/resume.html
+++ b/pages/resume.html
@@ -10,15 +10,7 @@
       <a href="../index.html">back</a>
     </div>
     <h4>Resume</h4>
-    <div class="resume-list">
-      <h5>cybersecurity:</h5>
-      <a href="#">[2024]</a>
-    </div>
-    <div class="resume-list">
-      <h5>comprehensive:</h5>
-      <a href="#">[2024]</a>
-    </div>
-
+    <a href="https://drive.google.com/file/d/1ml7K6_BGsfVKI5VsVyrepI_c8jFEX8sG/view?usp=sharing" target="_blank" rel="noopener noreferrer">latest-web (Google Drive)</a>
     <footer>
       <p>NECESSARY TEXT IN FOOTER</p>
     </footer>
