--- a/pages/travel.html
+++ b/pages/travel.html
@@ -12,8 +12,8 @@
     </div>
     <h4>Travel</h4>
     <ul>
-      <li><a href="../projects/23mottrip">2023 - Georgia->Washington Motorcycle Solo Trip</a></li>
-      <li><a href="../projects/24icetrip">2024 - Iceland Motorcycle Solo Trip</a></li>
+      <li><a href="travel/23trip.html">2023 - Georgia->Washington Motorcycle Solo Trip</a></li>
+      <li><a href="travel/24icetrip.html">2024 - Iceland Motorcycle Solo Trip</a></li>
     </ul>
       <p>Maybe in the future: Norway, Finland, Japan, New Zealand, Greenland</p>
 
