--- a/pages/travel/23trip.html
+++ b/pages/travel/23trip.html
@@ -14,7 +14,7 @@
     
     <p>Total Miles: ~9000</p>
     <p>Time: 7 Weeks</p>
-    <p>Suzuki V-Strom 650XT Adventure</p>
+    <p>Motorcycle: Suzuki V-Strom 650XT Adventure</p>
     <p>Departure: Georgia->Alabama->Mississippi->Louisiana->Texas->New Mexico->Arizona->California->Oregon->Washington
     <p>Return: Washington->Idaho->Montana->Wyoming->Colorado->New Mexico->Texas->Louisiana->Mississippi->Alabama->Georgia
     
@@ -34,7 +34,7 @@
     <p>I am bitter thinking about this trip and not eager to tell others about it. <br>
     Fortunately, I learned a lot from it; About myself and solo traveling.</p>
 
-    <a href="23trip-photos.html">[photos]</a>
+    <a href="23trip-photos.html">photos</a>
 
     <footer>
       <p>NECESSARY TEXT IN FOOTER</p>
