--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ncohalis Sthacnz</title>
+    <title>Nicholas Schantz</title>
     <link rel="stylesheet" href="resources/main.css">
   </head>
 
