--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="back-btn">
-    <a href="../index.html">back</a>
+    <a href="/">back</a>
   </div>
   <h4>
     Nicholas Schantz is a highly motivated individual with an interest in cybersecurity. Specifically in reverse engineering, vulnerability research, and exploit development.<br>
@@ -22,7 +22,7 @@
     He is currently employed as a Software Engineer I.
     He reverse engineers a variety of software and hardware/systems.<br>
   </h4>
-  <i>He is not a fan of frontend development.</i>
+  <!-- <i>Not a fan of frontend development.</i> -->
 
   <footer>
     <p>NECESSARY TEXT IN FOOTER</p>
