--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,11 +8,12 @@
 
   <body>
     <div class="back-btn">
-      <a href="../index.html">back</a>
+      <a href="/">back</a>
     </div>
     <h4>Projects</h4>
     <ul>
-      <li><a href="https://github.com/nSchantz/nSchantz.github.io" target="_blank" rel="noopener noreferrer">inthecrnr: This Site</a>
+      <li><a href="https://github.com/nSchantz/nSchantz.github.io" target="_blank" rel="noopener noreferrer">schantz.dev: This Site</a>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">inthecrnr.com: The Other Site</a>
       <li><a href="https://github.com/nSchantz/chip8-c/" target="_blank" rel="noopener noreferrer">chip8-c: Chip 8 Interpreter in C</a>
       <li><a href="#" target="_blank" rel="noopener noreferrer">uds-viz: Unix Domain Socket Visualizer</a></li>
       <li><a href="#" target="_blank" rel="noopener noreferrer">greencrab: Rust Remote Access Tool (Educational)</a></li>
