--- a/pages/travel/23trip.html
+++ b/pages/travel/23trip.html
@@ -27,7 +27,7 @@
     I met up with some friends in Albuquerque, San Franciso, and Seattle which each was a great time. 
     It was amazing to experience these cities even if it was for a brief period of time.<br>
 
-    The V-Strom 650 is a tank. It made the trip with no issues. I changed my oil every ~3000 miles and cleaned/relubed the
+    The V-Strom 650 is a tank. It made the trip with no issues. I changed its oil every ~3000 miles and cleaned/relubed the
     chain every ~1000 miles. A chain adjustment was performed at ~6500 miles, and the air filter was changed at ~9000 miles.
     </p>
 
