--- a/pages/motorcycles.html
+++ b/pages/motorcycles.html
@@ -7,7 +7,7 @@
 
   <body>
     <div class="back-btn">
-      <a href="../index.html">back</a>
+      <a href="/">back</a>
     </div>
     <h4>Motorcycles</h4>
     <ul>
