--- a/pages/resume.html
+++ b/pages/resume.html
@@ -7,7 +7,7 @@
 
   <body>
     <div class="back-btn">
-      <a href="../index.html">back</a>
+      <a href="/">back</a>
     </div>
     <h4>Resume</h4>
     <a href="https://drive.google.com/file/d/1ml7K6_BGsfVKI5VsVyrepI_c8jFEX8sG/view?usp=sharing" target="_blank" rel="noopener noreferrer">latest-web (Google Drive)</a>
