--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <li><a href="pages/about.html">about</a><li>
       <li><a href="pages/resume.html">resume</a></li>
       <li><a href="pages/projects.html">projects</a></li>
-      <li><a href="pages/hacking.html">hacking</a></li>
+      <li><a href="pages/writeups.html">writeups</a></li>
       <!-- Who cares? <li><a href="pages/motorcycles.html">motorcycles</a></li> -->
-      <li><a href="pages/travel.html">travel</a></li>
+      <!-- Move to blog <li><a href="pages/travel.html">travel</a></li> -->
     </ul>
 
     <footer>
