--- a/pages/projects.html
+++ b/pages/projects.html
@@ -17,7 +17,7 @@
       <li><a href="https://github.com/nSchantz/chip8-c/" target="_blank" rel="noopener noreferrer">chip8-c: Chip 8 Interpreter in C</a>
       <li><a href="#" target="_blank" rel="noopener noreferrer">uds-viz: Unix Domain Socket Visualizer</a></li>
       <li><a href="#" target="_blank" rel="noopener noreferrer">greencrab: Rust Remote Access Tool (Educational)</a></li>
-      <li><a href="#" target="_blank" rel="noopener noreferrer">throughloop: Fun Ball Passing Game</a><li>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">throughloop: Ball Passing Game</a><li>
     </ul>
 
     <footer>
