--- a/pages/travel/23trip-photos.html
+++ b/pages/travel/23trip-photos.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="back-btn">
-      <a href="../travel.html">back</a>
+      <a href="/pages/travel.html">back</a>
     </div>
     
     <footer>
