--- a/pages/travel/23trip.html
+++ b/pages/travel/23trip.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="back-btn">
-      <a href="../travel.html">back</a>
+      <a href="/pages/travel.html">back</a>
     </div>
     <h4>2023 Motorcycle Trip: Georgia -> Washington</h4>
     
