--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <br>
     <br>
     <ul>
-      <li><a href="pages/about.html">about</a><li>
-      <li><a href="pages/resume.html">resume</a></li>
-      <li><a href="pages/projects.html">projects</a></li>
-      <li><a href="pages/writeups.html">writeups</a></li>
-      <!-- Who cares? <li><a href="pages/motorcycles.html">motorcycles</a></li> -->
-      <!-- Move to blog <li><a href="pages/travel.html">travel</a></li> -->
+      <li><a href="pages/about">about</a><li>
+      <li><a href="pages/resume">resume</a></li>
+      <li><a href="pages/projects">projects</a></li>
+      <li><a href="pages/writeups">writeups</a></li>
+      <!-- Who cares? <li><a href="pages/motorcycles">motorcycles</a></li> -->
+      <!-- Move to blog <li><a href="pages/travel">travel</a></li> -->
     </ul>
 
     <footer>
