--- a/pages/about.html
+++ b/pages/about.html
@@ -25,6 +25,6 @@
   <!-- <i>Not a fan of frontend development.</i> -->
 
   <footer>
-    <p>NECESSARY TEXT IN FOOTER</p>
+    <p>NECESSARY LEGAL TEXT IN FOOTER</p>
   </footer>
 </body>
