--- a/pages/motorcycles.html
+++ b/pages/motorcycles.html
@@ -17,7 +17,7 @@
     </ul>
 
     <footer>
-      <p>NECESSARY TEXT IN FOOTER</p>
+      <p>NECESSARY LEGAL TEXT IN FOOTER</p>
     </footer>
   </body>
 </html>
