--- a/pages/projects.html
+++ b/pages/projects.html
@@ -21,7 +21,7 @@
     </ul>
 
     <footer>
-      <p>NECESSARY TEXT IN FOOTER</p>
+      <p>NECESSARY LEGAL IN FOOTER</p>
     </footer>
   </body>
 </html>
