--- a/pages/travel-l/23trip-photos.html
+++ b/pages/travel-l/23trip-photos.html
@@ -12,7 +12,7 @@
     </div>
     
     <footer>
-      <p>NECESSARY TEXT IN FOOTER</p>
+      <p>NECESSARY LEGAL TEXT IN FOOTER</p>
     </footer>
   </body>
 </html>
