--- a/pages/travel-l/23trip.html
+++ b/pages/travel-l/23trip.html
@@ -37,7 +37,7 @@
     <a href="23trip-photos">photos</a>
 
     <footer>
-      <p>NECESSARY TEXT IN FOOTER</p>
+      <p>NECESSARY LEGAL TEXT IN FOOTER</p>
     </footer>
   </body>
 </html>
