--- a/pages/travel.html
+++ b/pages/travel.html
@@ -18,7 +18,7 @@
       <p>Maybe in the future: Norway, Finland, Japan, New Zealand, Greenland</p>
 
     <footer>
-      <p>NECESSARY TEXT IN FOOTER</p>
+      <p>NECESSARY LEGAL TEXT IN FOOTER</p>
     </footer>
   </body>
 </html>
