--- a/pages/writeups.html
+++ b/pages/writeups.html
@@ -16,7 +16,7 @@
   rop, hardware enumeration/dumping firmware, code injection, blah blah blah...</p>
 
   <footer>
-    <p>NECESSARY TEXT IN FOOTER</p>
+    <p>NECESSARY LEGAL TEXT IN FOOTER</p>
   </footer>
 </body>
 
