--- a/pages/resume.html
+++ b/pages/resume.html
@@ -12,7 +12,7 @@
     <h4>Resume</h4>
     <a href="https://drive.google.com/file/d/1ml7K6_BGsfVKI5VsVyrepI_c8jFEX8sG/view?usp=sharing" target="_blank" rel="noopener noreferrer">latest-web (Google Drive)</a>
     <footer>
-      <p>NECESSARY TEXT IN FOOTER</p>
+      <p>NECESSARY LEGAL TEXT IN FOOTER</p>
     </footer>
   </body>
 </html>
