--- a/pages/writeups.html
+++ b/pages/writeups.html
@@ -10,7 +10,7 @@
   <div class="back-btn">
     <a href="/">back</a>
   </div>
-  <h4>Hacking</h4>
+  <h4>Writeups</h4>
 
   <p>If I pursue this, writeups on: function hooking, buffer overflow (basic, aslr, etc), 
   rop, hardware enumeration/dumping firmware, code injection, blah blah blah...</p>
