Site description added

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Nicholas Schantz</title>
     <link rel="stylesheet" href="resources/main.css">
+    <meta name="description" content="SW/HW Reverse Engineer">
   </head>
 
   <body>
