Lazy mobile fix

--- a/pages/about.html
+++ b/pages/about.html
@@ -15,14 +15,15 @@
   <div class="back-btn">
     <a href="/">back</a>
   </div>
-  <h4>
-    Nicholas Schantz is a highly motivated individual with an interest in cybersecurity. Specifically in reverse engineering, vulnerability research, and exploit development.<br>
-    He graduated from The Georgia Institute of Technology
-    with a Bachelors in Computer Engineering and a 3.92 GPA.<br>
-    He is currently employed as a Software Engineer I.
-    He reverse engineers a variety of software and hardware/systems.<br>
-  </h4>
-  <!-- <i>Not a fan of frontend development.</i> -->
+  <ul>
+    <li>Nicholas Schantz is a highly motivated individual with an interest in cybersecurity. 
+    Specifically in reverse engineering, vulnerability research, and exploit development.
+    <li>He graduated from The Georgia Institute of Technology 
+    with a Bachelors in Computer Engineering and a 3.92 GPA.<li>
+    <li>He is currently employed as a Software Engineer I.
+    He reverse engineers a variety of software and hardware/systems.<li>    
+    <!-- <li><i>Not a fan of frontend development.</i><li> -->
+  <ul>
 
   <footer>
     <p>NECESSARY LEGAL TEXT IN FOOTER</p>
