Lazy mobile fix - 2

--- a/pages/about.html
+++ b/pages/about.html
@@ -15,6 +15,7 @@
   <div class="back-btn">
     <a href="/">back</a>
   </div>
+  <h4>About</h4>
   <ul>
     <li>Nicholas Schantz is a highly motivated individual with an interest in cybersecurity. 
     Specifically in reverse engineering, vulnerability research, and exploit development.
