Lazy mobile fix - 3

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,11 +3,6 @@
   <head>
     <title>Nacholis Shcatnz</title>
     <link rel="stylesheet" href="../resources/main.css">
-    <style>
-      h4 {
-        text-align: justify;
-      }
-    </style>
   </head>
 </html>
 
@@ -16,16 +11,19 @@
     <a href="/">back</a>
   </div>
   <h4>About</h4>
-  <ul>
-    <li>Nicholas Schantz is a highly motivated individual with an interest in cybersecurity. 
-    Specifically in reverse engineering, vulnerability research, and exploit development.
-    <li>He graduated from The Georgia Institute of Technology 
-    with a Bachelors in Computer Engineering and a 3.92 GPA.<li>
-    <li>He is currently employed as a Software Engineer I.
-    He reverse engineers a variety of software and hardware/systems.<li>    
-    <!-- <li><i>Not a fan of frontend development.</i><li> -->
-  <ul>
-
+  <p>
+  Nicholas Schantz is a highly motivated individual with an interest in cybersecurity. 
+  Specifically in reverse engineering, vulnerability research, and exploit development.
+  </p>
+  <p>
+  He graduated from The Georgia Institute of Technology 
+  with a Bachelors in Computer Engineering and a 3.92 GPA.
+  </p>
+  <p>
+  He is currently employed as a Software Engineer I.
+  He reverse engineers a variety of software and hardware/systems.
+  </p>    
+  <!-- <li><i>Not a fan of frontend development.</i><li> -->
   <footer>
     <p>NECESSARY LEGAL TEXT IN FOOTER</p>
   </footer>
