Lazy mobile fix - 4

--- a/pages/about.html
+++ b/pages/about.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Nacholis Shcatnz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../resources/main.css">
   </head>
 </html>
