Adding travel map via leafletjs & stadia/openmap

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <li><a href="pages/resume">resume</a></li>
       <li><a href="pages/projects">projects</a></li>
       <li><a href="pages/writeups">writeups</a></li>
+      <li><a href="pages/map">travel</a></li>
       <!-- Who cares? <li><a href="pages/motorcycles">motorcycles</a></li> -->
-      <!-- Move to blog <li><a href="pages/travel">travel</a></li> -->
     </ul>
 
     <footer>
