Change map to a free option

--- a/pages/map.html
+++ b/pages/map.html
@@ -38,13 +38,10 @@
 
       /* Display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
       L.tileLayer(
-        'https://tiles.stadiamaps.com/tiles/stamen_toner/{z}/{x}/{y}{r}.{ext}', {
+        'https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
           minZoom: 0,
           maxZoom: 20,
-          attribution: '&copy; <a href="https://www.stadiamaps.com/" target="_blank">Stadia Maps</a>\
-           &copy; <a href="https://www.stamen.com/" target="_blank">Stamen Design</a>\
-           &copy; <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a>\
-           &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+          attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>',
           ext: 'png'
       }).addTo(map);
 
