--- a/pages/map.html
+++ b/pages/map.html
@@ -5,20 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
 
+  <link rel="stylesheet" href="../resources/main.css">
+
   <!-- Load Leaflet code library: see https://leafletjs.com/download.html -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
   <!-- Position the map and title with Cascading Style Sheet (CSS) -->
   <style>
-    body { margin:0; padding:0; }
-    #map { position: absolute; top:0; bottom:0; right:0; left:0; }
+    body { margin:0; padding:0; background: black; }
+    #map { position: absolute; top:35px; bottom:0; right:0; left:0; }
     #map-title { position: relative; margin-top: 10px; margin-left: 50px; float: left; background: white; border: 2px solid rgba(0,0,0,0.2); padding: 6px 8px; font-family: Helvetica; font-weight: bold; font-size: 24px; z-index: 800; }
   </style>
 </head>
 <body>
 
-  <div id="map-title">Travel</div>
+  <div class="back-btn">
+    <a href="/">back</a>
+  </div>
+
+  <!-- <div id="map-title">Travel</div> -->
   <div id="map"></div>
 
   <script type="module">  
