Directory structure updates. Map javascript updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="main-image">
-      <img src="images/rose.png">
+      <img src="/resources/icons/rose.png">
     </div>
     <br>
     <br>
