Map page header added

--- a/pages/map.html
+++ b/pages/map.html
@@ -22,8 +22,9 @@
 
   <div class="back-btn">
     <a href="/">back</a>
+    <span style="right: 0">Thanks to Reshot (Icons) & Leaflet/OpenSourceMaps (Map Library/Map). Check out my source (https://github.com/nSchantz/nSchantz.github.io) and script (https://github.com/nSchantz/file2map) for automating image/video upload.</span>
   </div>
-
+   
   <!-- <div id="map-title">Travel</div> -->
   <div id="map"></div>
 
