--- a/pages/projects.html
+++ b/pages/projects.html
@@ -20,7 +20,7 @@
       <li><a href="#" target="_blank" rel="noopener noreferrer">greencrab: Rust Remote Access Tool (Educational)</a></li>
       <li><a href="#" target="_blank" rel="noopener noreferrer">throughloop: Ball Passing Game</a><li>
       <li><a href="#" target="_blank" rel="noopener noreferrer">gbc-c: Gameboy Color Emulator in C</a><li>
-      <li><a href="#" target="_blank" rel="noopener noreferrer">trav-map: Static travel map using Next.js/Leaflett</a></li>
+      <li><a href="/pages/map" target="_blank" rel="noopener noreferrer">map: Static travel map using Leaflet/OpenStreetMaps</a></li>
     </ul>
 
     <footer>
