Popup autopan disabled. More icons added

--- a/pages/map.html
+++ b/pages/map.html
@@ -58,9 +58,10 @@
     function init_map_data(map, type, json, layerControl) {
       var popupOptions =
       {
-        'maxWidth': '600',
-        'width': '300',
-        'className': 'popup'
+        'maxWidth': 600,
+        'width': 300,
+        'className': 'popup',
+        'autoPan': false
       }
 
       var imgIcon = L.icon({
