site misc updates

--- a/pages/writeups.html
+++ b/pages/writeups.html
@@ -13,8 +13,15 @@
   </div>
   <h4>Writeups</h4>
 
-  <p>If I pursue this, writeups on: function hooking, buffer overflow (basic, aslr, etc), 
-  rop, hardware enumeration/dumping firmware, code injection, blah blah blah...</p>
+  <p>If I pursue this, writeups on things like:</p>
+    <ul> 
+      <li>function hooking</li>
+      <li>buffer overflow (basic, aslr, etc)</li> 
+      <li>rop</li>
+      <li>hardware enumeration/dumping firmware</li>
+      <li>code injection</li>
+      <li>etc........</li>
+    </ul>
 
   <footer>
     <p>NECESSARY LEGAL TEXT IN FOOTER</p>
