allow embedded youtube videso to be fullscreened

--- a/pages/map.html
+++ b/pages/map.html
@@ -96,7 +96,7 @@
         if (type === "video") {
           var popupData = `Trip: ${marker.tag}<br>\
                            Estimated Position: [${marker.lat}, ${marker.long}]`;
-          var popupVideo = `<iframe width="600" height="450"\
+          var popupVideo = `<iframe allowfullscreen width="600" height="450"\
                               src="${marker.url}">\
                             </iframe>`
           var popupId   = `ID: ${marker.id}`
