Hiding stuff that is unfinished/not actively being worked on

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <br>
     <ul>
       <li><a href="pages/about">about</a><li>
-      <li><a href="pages/resume">resume</a></li>
-      <li><a href="pages/projects">projects</a></li>
-      <li><a href="pages/writeups">writeups</a></li>
+      <!-- <li><a href="pages/resume">resume</a></li> -->
+      <!-- <li><a href="pages/projects">projects</a></li> -->
+      <!-- <li><a href="pages/writeups">writeups</a></li> -->
       <li><a href="pages/map">travel</a></li>
       <!-- Who cares? <li><a href="pages/motorcycles">motorcycles</a></li> -->
     </ul>
