--- a/pages/about.html
+++ b/pages/about.html
@@ -23,8 +23,13 @@
   <p>
   He is currently employed as a Software Engineer I.
   He reverse engineers a variety of software and hardware/systems.
+  <br>
+  <br>
+  <br>
   </p>    
   <!-- <li><i>Not a fan of frontend development.</i><li> -->
+  
+  <a class="a-underline" href="https://www.linkedin.com/in/nschantz/">Feel free to reach out on Linkedin</a>
   <footer>
     <p>NECESSARY LEGAL TEXT IN FOOTER</p>
   </footer>
