preferred grammar style

--- a/pages/about.html
+++ b/pages/about.html
@@ -13,23 +13,21 @@
   </div>
   <h4>About</h4>
   <p>
-  Nicholas Schantz is a highly motivated individual with an interest in cybersecurity. 
-  Specifically in reverse engineering, vulnerability research, and exploit development.
+  nicholas schantz is skilled in reverse engineering, vulnerability research, and exploit development.
   </p>
   <p>
-  He graduated from The Georgia Institute of Technology 
+  he graduated from The Georgia Institute of Technology 
   with a Bachelors in Computer Engineering and a 3.92 GPA.
   </p>
   <p>
-  He is currently employed as a Software Engineer I.
-  He reverse engineers a variety of software and hardware/systems.
+  he is currently employed and reverse engineers a variety of software and hardware/systems.
   <br>
   <br>
   <br>
   </p>    
   <!-- <li><i>Not a fan of frontend development.</i><li> -->
   
-  <a class="a-underline" href="https://www.linkedin.com/in/nschantz/">Feel free to reach out on Linkedin</a>
+  <a class="a-underline" href="https://www.linkedin.com/in/nschantz/">linkedin</a>
   <footer>
     <p>NECESSARY LEGAL TEXT IN FOOTER</p>
   </footer>
