--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- <li><a href="pages/projects">projects</a></li> -->
       <!-- <li><a href="pages/writeups">writeups</a></li> -->
       <li><a href="pages/map">travel</a></li>
-      <!-- Who cares? <li><a href="pages/motorcycles">motorcycles</a></li> -->
+      <!-- <li><a href="pages/motorcycles">motorcycles</a></li> -->
     </ul>
 
     <footer>
