even more preferred grammar style

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,8 +16,8 @@
   nicholas schantz is skilled in reverse engineering, vulnerability research, and exploit development.
   </p>
   <p>
-  he graduated from The Georgia Institute of Technology 
-  with a Bachelors in Computer Engineering and a 3.92 GPA.
+  he graduated from the georgia institute of technology 
+  with a bachelors in computer engineering (3.92 gpa).
   </p>
   <p>
   he is currently employed and reverse engineers a variety of software and hardware/systems.
@@ -25,7 +25,7 @@
   <br>
   <br>
   </p>    
-  <!-- <li><i>Not a fan of frontend development.</i><li> -->
+  <!-- <li><i>not a fan of frontend development.</i><li> -->
   
   <a class="a-underline" href="https://www.linkedin.com/in/nschantz/">linkedin</a>
   <footer>
