--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Nacholis Shcatnz</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <link rel="stylesheet" href="../resources/main.css">
   </head>
 </html>
@@ -12,6 +12,7 @@
     <a href="/">back</a>
   </div>
   <h4>About</h4>
+  <div class="about">
   <p>
   nicholas schantz is skilled in reverse engineering, vulnerability research, and exploit development.
   </p>
@@ -25,6 +26,7 @@
   <br>
   <br>
   </p>    
+  </div>
   <!-- <li><i>not a fan of frontend development.</i><li> -->
   
   <a class="a-underline" href="https://www.linkedin.com/in/nschantz/">linkedin</a>
