bruteforce mobile 2 - please stop being responsive to my page

--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Nacholis Shcatnz</title>
-    <meta name="viewport" content="width=device-width, initial-scale=0.5">
+    <meta name="viewport" content="">
     <link rel="stylesheet" href="../resources/main.css">
   </head>
 </html>
