--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <title>Nicholas Schantz</title>
     <link rel="stylesheet" href="resources/main.css">
     <meta name="description" content="SW/HW Reverse Engineer">
