--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Ncoahils Sactnhz</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <link rel="stylesheet" href="../resources/main.css">
   </head>
 
